# hybrid-optimistic-l2

CLI/: connect.cjs  index.js  package-lock.json  package.json  sequencer.proto  wallet.js  wallets.json
contracts/src/: L2Core.sol
l2-batcher/: Cargo.toml  build.rs
l2-batcher/proto/: batcher.proto
l2-batcher/src/: client.rs  server.rs
l2-sequencer/: Cargo.toml  build.rs
l2-sequencer/src/: client.rs  server.rs
l2-sm/: abi.json  index.ts  package-lock.json  package.json  tsconfig.json
