[package]
name = "l2-batcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "batcher-server"
path = "src/server.rs"

[[bin]]
name = "batcher-client"
path = "src/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[build-dependencies]
tonic-build = "0.7"